# PyQBMMlib

./: .gitignore  CITATION.cff  Makefile  README.md  README.tex.md  pyproject.toml  requirements.txt  setup.py  testing.nb
.github/workflows/: ci.yml
Cpp-CUDA/: chyqmom4.cu  chyqmom9.cu  hyqmom.cu  main.hpp  run_chyqmom4.cpp  run_chyqmom9.cpp
Fortran_Code/: Hybrid_Method  Hybrid_Method.f95  Hybrid_Method.f95~  nn_module.mod
ML_Code/: 3M_Prediction.py  Form_ML_Data.py  HM_MLQBMM.h5  HM_MLQBMM.mat  HM_Prediction.py  HM_Sinusoidal_MLQBMM.h5  HM_Sinusoidal_MLQBMM_Period3.mat  HM_Sinusoidal_MLQBMM_Period4.mat  HM_Sinusoidal_MLQBMM_Period5.mat  LM_Approach2.py  LM_Approach3.py  LM_Approach4.py  LM_Prediction.py  LM_Prediction_Weights.py  Loss_Function.py  ML_Data.py  ML_Training.py  RHSM_Prediction.py  loss_params.py
ML_Code/Neural_Nets/: LM_Random_MLQBMM.h5  LM_Random_MLQBMM_Approach1.h5  LM_Random_MLQBMM_Approach2.h5  LM_Random_MLQBMM_Approach2_Weights1_Pressure.h5  LM_Random_MLQBMM_Approach2_Weights2_Pressure.h5  LM_Random_MLQBMM_Approach2_Weights4_Pressure.h5  LM_Random_MLQBMM_Approach3.h5  LM_Random_MLQBMM_Approach4.h5  LM_Random_MLQBMM_Approach4_Weights1.h5  LM_Random_MLQBMM_Approach4_Weights2.h5  LM_Random_MLQBMM_Approach4_Weights3.h5  LM_Random_MLQBMM_Approach4_Weights4.h5  (+2 more)
Plotting_Files/: Compute_F_weights.m  Compute_PDF.m  Compute_Weights.m  Compute_new_Weights.m  Evolve_Moments.m  LM_ML_Constant_Results.m  LM_ML_Sinusoidal_Result_Plots.m  Loss_Function.m  Loss_Function_der.m  ML_Results_Plots.m  ML_Sinusoidal_Result_Plots.m  Moment_Weights.m  Random_3M_Results.m  Random_HM_Results.m  Random_LM_Results.m  Random_LM_Results2.m  Random_LM_Results3.m  Random_RHSM_Results.m  Scalar_Loss.m  Test.m  Test_Hybrid_Code.m  Test_Predictions.m  Weight_NR.m  Weights_Movie.m  Weights_Movie2.m  Weights_Movie5.m  Weights_Plot.m  Weights_Plot5.m  Weights_RHS.m  Xi_Loss.m  Xi_Weights.m
PyQBMMlib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PyQBMMlib/src/: advancer.py  (+8 more)
QBMMlib_mmatica/: messing_around.nb
docs/: TODO.rst  conf.py  index.rst
inputs/: example_1d.yaml  example_2d.yaml
notebooks/: Untitled.ipynb  Untitled1.ipynb  sympy.ipynb
old/: adaptive_Wheeler.py  extended_quadrature.py  gauss_radau.py  second_quadrature.py
old_python_QMOM/: hermite_quadrature.py  poly_anisotropic.py
pcstreamlines/: streamlines.nb
pycuda/: qbmm_cpu.py
qbmmlib/gpu/cuda/: CMakeLists.txt  README.md  basic_example.cu  chyqmom4.cu  chyqmom9.cu  chyqmom9_multi.cpp  compare_chyqmom4.cpp  compare_chyqmom9.cpp  compare_time.cpp  cudaErr.hpp  hyqmom.cu  hyqmom.hpp  main.cpp  main.hpp  plot_result.py  qmom_cuda.cu  qmom_cuda2.cu  qmom_cuda3.cu  qmom_openmp.cpp  run_chyqmom4_1kernel.cpp  test_hyqmom2.cpp  test_hyqmom2.cu  time_chyqmom9.cpp  time_chyqmom9_omp.cpp  time_chyqmom9_opm.cpp
qbmmlib/gpu/cuda/experiments/basic_example/: basic_example.cu
qbmmlib/gpu/cuda/experiments/mem_coalescing/: main.hpp
qbmmlib/gpu/cuda/experiments/mem_coalescing/earlier_attempts/: main.cpp
qbmmlib/gpu/cuda/experiments/multi-gpu/: test_context_switch.py
qbmmlib/gpu/cuda/experiments/pycuda_mem/: test_memory.py
qbmmlib/gpu/earlier_attempts/cuda/experiments/mem_coalescing/: CMakeLists.txt  dummy_hyqmom.cu  plot_res.cpp
qbmmlib/gpu/earlier_attempts/cuda/experiments/mem_coalescing/earlier_attempts/: qmom_cuda.cu  qmom_cuda2.cu  qmom_cuda3.cu
src/: Reference_Weights.py  advancer.py  bubble_model.py  bubble_state.py  config_manager.py  devel_driver.py  devel_driver_hybrid.py  inversion.py  main.ipynb  mc.py  moments.py  nextsteps.md  orig_profile.prof  profile.prof  qbmm_manager.py  second_profile.prof  simulation_domain.py  third_profile.prof  timing_function_calls.ipynb  waveforms.py
symbolic/: symbolic_stuff.ipynb
test/: test_cqmom.py  test_project.py  test_qbmm.py  test_wheeler.py
utils/: jets_util.py  nquad.py  pretty_print_util.py  quad.py  stats_util.py
(+148 files in other folders)
